darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_enum_with_default_and_required.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: convert_yaml(yaml)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "status": {
      "default": "draft",
      "enum": [
        "draft",
        "published",
        "archived"
      ]
    }
  },
  "required": [
    "status"
  ],
  "type": "object"
}
