darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_full_document_schema.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
assertion_line: 243
expression: convert_yaml(yaml)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "author": {
      "anyOf": [
        {
          "type": "null"
        },
        {
          "pattern": "\\S",
          "type": "string"
        },
        {
          "format": "email",
          "type": "string"
        }
      ]
    },
    "hero": {
      "anyOf": [
        {
          "type": "null"
        },
        {
          "const": ""
        },
        {
          "format": "darkmatter-file",
          "type": "string",
          "x-darkmatter-match": [
            "*.png",
            "*.jpg"
          ]
        }
      ]
    },
    "homepage": {
      "anyOf": [
        {
          "type": "null"
        },
        {
          "format": "uri",
          "type": "string",
          "x-darkmatter-url-scheme": [
            "https"
          ]
        }
      ]
    },
    "rating": {
      "anyOf": [
        {
          "type": "null"
        },
        {
          "maximum": 5,
          "minimum": 0,
          "type": "number"
        }
      ],
      "default": 3
    },
    "slug": {
      "pattern": "^[a-z0-9-]+$",
      "type": "string"
    },
    "status": {
      "anyOf": [
        {
          "type": "null"
        },
        {
          "enum": [
            "draft",
            "published",
            "archived"
          ]
        }
      ],
      "default": "draft"
    },
    "tags": {
      "anyOf": [
        {
          "type": "null"
        },
        {
          "items": {
            "type": "string"
          },
          "maxItems": 5,
          "minItems": 1,
          "type": "array",
          "uniqueItems": true
        }
      ]
    },
    "title": {
      "pattern": "\\S",
      "type": "string"
    }
  },
  "required": [
    "title",
    "slug"
  ],
  "type": "object"
}
