darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_inline_object_array.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: convert_yaml(yaml)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "entries": {
      "items": {
        "additionalProperties": false,
        "properties": {
          "bar": {
            "type": "string"
          },
          "foo": {
            "type": "string"
          }
        },
        "required": [
          "foo"
        ],
        "type": "object"
      },
      "type": "array"
    }
  },
  "type": "object"
}
