darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_inline_object_as_union_arm.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: convert_yaml(yaml)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "payload": {
      "anyOf": [
        {
          "additionalProperties": false,
          "properties": {
            "foo_id": {
              "type": "string"
            },
            "type": {
              "enum": [
                "foo"
              ]
            }
          },
          "required": [
            "type",
            "foo_id"
          ],
          "type": "object"
        },
        {
          "additionalProperties": false,
          "properties": {
            "bar_count": {
              "type": "number"
            },
            "type": {
              "enum": [
                "bar"
              ]
            }
          },
          "required": [
            "type",
            "bar_count"
          ],
          "type": "object"
        }
      ]
    }
  },
  "type": "object"
}
