darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_inline_object_bare.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: convert_yaml(yaml)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "config": {
      "additionalProperties": false,
      "properties": {
        "host": {
          "type": "string"
        },
        "port": {
          "default": 8080,
          "type": "number"
        }
      },
      "required": [
        "host"
      ],
      "type": "object"
    }
  },
  "type": "object"
}
