darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_inline_object_empty.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: convert_yaml(yaml)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "empty": {
      "additionalProperties": false,
      "properties": {},
      "type": "object"
    }
  },
  "type": "object"
}
