darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_inline_object_mixed_with_string_fallback.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: convert_yaml(yaml)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "metadata": {
      "anyOf": [
        {
          "items": {
            "additionalProperties": false,
            "properties": {
              "key": {
                "type": "string"
              },
              "value": {
                "type": "string"
              }
            },
            "required": [
              "key",
              "value"
            ],
            "type": "object"
          },
          "type": "array"
        },
        {
          "type": "string"
        }
      ]
    }
  },
  "type": "object"
}
