darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_inline_object_multi_line.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: convert_yaml(yaml)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "endpoints": {
      "items": {
        "additionalProperties": false,
        "properties": {
          "method": {
            "enum": [
              "GET",
              "POST",
              "PUT",
              "DELETE"
            ]
          },
          "timeout": {
            "default": 30,
            "type": "number"
          },
          "url": {
            "format": "uri",
            "type": "string",
            "x-darkmatter-url-scheme": [
              "https"
            ]
          }
        },
        "required": [
          "url",
          "method"
        ],
        "type": "object"
      },
      "type": "array"
    }
  },
  "type": "object"
}
