darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_inline_object_nested.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: convert_yaml(yaml)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "database": {
      "additionalProperties": false,
      "properties": {
        "primary": {
          "additionalProperties": false,
          "properties": {
            "host": {
              "type": "string"
            },
            "port": {
              "default": 5432,
              "type": "number"
            }
          },
          "required": [
            "host"
          ],
          "type": "object"
        },
        "replicas": {
          "items": {
            "additionalProperties": false,
            "properties": {
              "host": {
                "type": "string"
              },
              "port": {
                "type": "number"
              }
            },
            "type": "object"
          },
          "type": "array"
        }
      },
      "type": "object"
    }
  },
  "type": "object"
}
