darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_inline_object_required_value.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: convert_yaml(yaml)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "config_required": {
      "additionalProperties": false,
      "properties": {
        "host": {
          "type": "string"
        }
      },
      "type": "object"
    }
  },
  "required": [
    "config_required"
  ],
  "type": "object"
}
